--- a/modularity1.html
+++ b/modularity1.html
@@ -158,11 +158,11 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-			    		<div>
-				    		<div>
+			    		<div class="blackout">
+				    		<div class="lightbox">
 					    		<h3>Hello</h3>
 						    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
-						    	<div>
+						    	<div id="button">
 						    		<a href="#">Close</a>
 						    	</div>
 				    		</div>
@@ -178,21 +178,21 @@
 	    		<p class="instruction-text">A media block is a left-floated image with some content beside it. Think Facebook updates.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<img src="http://placehold.it/50">
-			    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+			    	<img class="avatar" src="http://placehold.it/50">
+			    	<p class="comment">Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    <!-- End editable area -->
 			    </div>
 
 	    		<p class="instruction-text">Does it work with a different html structure?</p>
 
 		    	<!-- Edit here -->
-					<div class="instruction-answer">
+					<div class="instruction-answer" >
 			    	<div>
-				    	<img src="http://placehold.it/50">
+				    	<img class="avatar" src="http://placehold.it/50">
 				    </div>
 			    	<div>
-				    	<h2>Cupcake Ipsum</h2>
-				    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+				    	<h2 class="name"  >Cupcake Ipsum</h2>
+				    	<p class="comment" >Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    </div>
 				    <!-- End editable area -->
 				  </div>
@@ -202,26 +202,26 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-				    	<img src="http://placehold.it/50">
+				    	<img class="avatar" src="http://placehold.it/50">
 				    </div>
 			    	<div>
-				    	<h2>Cupcake Ipsum</h2>
-				    	<p>Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+				    	<h2 class="name">Cupcake Ipsum</h2>
+				    	<p class="comment">Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 
 				    	<div>
-					    	<img src="http://placehold.it/32">
+					    	<img class="subavatar" src="http://placehold.it/32">
 					    </div>
 				    	<div>
-					    	<h2>I like cupcakes!</h2>
-					    	<p>Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
+					    	<h2 class="subname" >I like cupcakes!</h2>
+					    	<p class="subcomment" >Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
 					    </div>
 
 				    	<div>
-					    	<img src="http://placehold.it/32">
+					    	<img class="subavatar" src="http://placehold.it/32">
 					    </div>
 				    	<div>
-					    	<h2>I like cupcakes, too!</h2>
-					    	<p>Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
+					    	<h2 class="subname">I like cupcakes, too!</h2>
+					    	<p class="subcomment">Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
 					    </div>
 				    </div>
 				    <!-- End editable area -->
